<resources>
    <string name="app_name">Time Tracker</string>

    <string name="rootProjectsText">Root Projects</string>
    <string name="reportGeneratorText">Generate Reports</string>
    <string name="activeText">Active Tasks</string>
    <string name="settingsText">Time Tracker</string>

    <string name="searchText">Search</string>
    <string name="resumeAllText">Resume all</string>
    <string name="stopAllText">Pause all</string>

    <string name="newProjectString">New Project</string>

    <string name="newProjectTitleText">Add Project</string>
    <string name="newTaskTitleText">Add Task</string>
    <string name="newIntervalTitleText">Add Interval</string>
    <string name="nodeOptions" translatable="false">NodeOptions</string>
    <string name="nodeMenuEdit">Edit</string>
    <string name="nodeMenuDelete">Delete</string>
    <string name="saveString">Save</string>
    <string name="newTaskString">New Task</string>
    <string name="newIntervalString">New Interval</string>
    <string name="settingsTitle">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="summary_language">Change the application language</string>
    <string name="language">Language</string>
    <string name="refresh_rate">Refresh rate</string>
    <string name="summary_refresh_rate">Change the refresh rate</string>
    <string name="basic">Basic</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string-array name="refresh_rate_strings">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <integer-array name="refresh_rate_selection">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </integer-array>

    <string-array name="available_languages">
        <item>Spanish</item>
        <item>Catalan</item>
        <item>English</item>
    </string-array>

    <string-array name="available_languages_values">
        <item>es</item>
        <item>ca</item>
        <item>en</item>
    </string-array>

    <string name="title_activity_tree_viewer">Time Tracker</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="detailsMenuEdit">Details</string>
    <string name="editMenuEdit">Edit</string>
    <string name="removeMenuEdit">Remove</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="okay">Okay</string>
    <string name="defaultDescription">No description provided</string>
    <string name="defaultDate">None</string>
    <string name="duration">Duration</string>
    <string name="reports">Reports</string>
    <string name="Short">Short</string>
    <string name="detailed">Detailed</string>
    <string name="generate_report">Generate Report</string>
    <string name="active_task">Active Task</string>
    <string name="pause_all">Pause all</string>
    <string name="resume_all">Resume all</string>
    <string name="no_active_task">There\'s no active task now.</string>
    <string name="cancel">Cancel</string>
    <string name="id" translatable="false">id</string>
    <string name="noRootProjects">There are no projects. Press + to add the first one</string>
    <string name="display_path">Display Path</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="format">Format</string>
    <string name="type">Type</string>
    <string name="projects">Projects</string>


</resources>
